--- a/materials/header.tex
+++ b/materials/header.tex
@@ -52,7 +52,7 @@
 \def\hl{\color[RGB]{230, 172, 0}}
 
 \def\forecast{\begin{alertblock}{}\fontsize{10}{11}\sf
- A forecast is an estimate of the probabilities of possible futures.
+ A forecast is an estimate of the probability distribution of a variable to be observed in the future.
 \end{alertblock}}
 
 \def\simfutures{\begin{textblock}{2.9}(12.8,7.7)
