--- a/exercises/day4.qmd
+++ b/exercises/day4.qmd
@@ -7,6 +7,7 @@ editor: visual
 #| label: setup
 
 library(tsibble)
+library(tsibbledata)
 library(fable)
 library(feasts)
 library(fabletools)
@@ -32,7 +33,6 @@ fit |>
   autoplot(???)
 ```
 
-
 Produce forecasts from an automatically selected ARIMA model for Australia's print media turnover. Don't forget to find and use a suitable transformation to simplify the multiplicative patterns in the data.
 
 ```{r}
@@ -56,7 +56,6 @@ fit |>
 ```{r}
 vaccine_administrated_tsb <- read_rds("data/vaccine_administrated_tsb.rds")
 ```
-
 
 ## Specify and traing ETS models
 
