--- a/materials/04_arima.qmd
+++ b/materials/04_arima.qmd
@@ -476,7 +476,7 @@ h02 |> autoplot(
 )
 ```
 
-## Example: US electricity production
+## Cortecosteroid drug sales
 \fontsize{11}{12}\sf
 
 ```{r h02fit, echo=TRUE, fig.height=2.8}
@@ -485,7 +485,7 @@ h02 |>
   report()
 ```
 
-## Example: US electricity production
+## Cortecosteroid drug sales
 \fontsize{11}{13}\sf
 
 ```{r h02fcst, echo=TRUE, fig.height=2.8}
